--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,6 @@
 version: fastorch
 description: a fast pytorch project
+time_version: True # if set ture, add time information in version
 load_epoch: False # it will test your model if set a value, e.g. best, 10, 100
 # filepath
 train_dirs:
